# loopcanary

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SCOPE.md  pyproject.toml  trajaudit_run_20260607_213800.json  trajaudit_run_20260607_220217.json  trajaudit_run_20260608_015831.json  trajaudit_run_20260608_021333.json  v01_first_run.json
.github/workflows/: ci.yml
docs/: BACKLOG.md  COLLAB_CONTEXT.md  DECISIONS.md  PROJECT_STATE.md  SESSION_PROTOCOLS.md  architecture.md  auto_session_questions.md  exploit-taxonomy.md  followups.md  malt_recon.md  pivot_decision.md  pivot_v1_agentic.md  prompt_and_format_diagnosis.md  prompt_parity_verification.md  reading_notes.md  refactor_summary.md  related-work.md  repo_audit.md  score_parser_diagnosis.md  spec.md  status_report.md  v01_first_run.md  v1_scope.md  writing_a_monitor.md
examples/: README.md  intervention_policy_demo.py  jsonl_trace_demo.py  rollout_shape_demo.py  stuck_loop_demo.py
loopcanary/: __init__.py  api.py  protocol.py  schema.py
loopcanary/adapters/: __init__.py  claude_code.py  jsonl_trace.py
loopcanary/detectors/: __init__.py  context_pressure.py  null_progress.py  repeated_action.py
research/: analyze_run.py  finding_reasoning_dependence.md
research/data/: sonnet-4-6_n60_20260608.json
scripts/: validate_trace.py
src/loopcanary/: __init__.py  cli.py
src/loopcanary/adapters/: __init__.py  malt.py
src/loopcanary/benchmarks/: __init__.py  base.py  swe_bench.py  terminal_bench.py
src/loopcanary/core/: __init__.py  events.py  runner.py  trajectory.py
src/loopcanary/layer1_workspace/: __init__.py
src/loopcanary/layer2_syntactic/: __init__.py  ast_scanner.py  code_extractor.py  exploit_signatures.py
src/loopcanary/layer3_semantic/: __init__.py  escalation.py  judge.py  prompts.py
src/loopcanary/layer3_semantic/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  vllm_provider.py
src/loopcanary/monitors/: __init__.py  metr_prompt.py
src/loopcanary/reporting/: __init__.py  exporters.py  leaderboard.py
src/loopcanary/transformations/: __init__.py  structural.py
src/trajaudit/adapters/: malt.py
tests/: test_api.py  test_claude_code.py  test_cli.py  test_detectors.py  test_jsonl_trace.py  test_protocol.py  test_report.py  test_schema.py  test_smoke.py  test_validate.py
tests/adapters/: test_malt.py
tests/core/: test_events.py  test_verdict.py
tests/fixtures/claude_code/: malformed.jsonl  unknown_types.jsonl  well_formed.jsonl
tests/monitors/: test_metr_prompt.py
tests/transformations/: conftest.py  test_drop_reasoning.py  test_pad_with_noops.py  test_truncate_observations.py
