[project]
name = "loopcanary"
version = "0.1.0"
description = "Agent-loop observability SDK: diagnose degradation, context compression, and cost run-away in agent loops."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tianyi Zhang" }]
requires-python = ">=3.11"
keywords = [
    "llm",
    "agent",
    "observability",
    "monitoring",
    "detector",
    "agent-loop",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# SDK seed: the data model needs only pydantic. The v1.0 SDK will add
# deps as it is built (e.g. rich for the timeline renderer, anthropic
# for the metr_safety detector under the [llm] extra).
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[project.urls]
Homepage = "https://github.com/tianyi-zhang-02/loopcanary"
Issues = "https://github.com/tianyi-zhang-02/loopcanary/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopcanary"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/loopcanary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/loopcanary"]
branch = true

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]
