[project]
name = "loopcanary"
version = "0.1.0"
description = "The pytest of agent-loop health: a zero-infrastructure, in-process library that detects agent-loop degradation with cheap deterministic checks."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Tianyi Zhang" }]
requires-python = ">=3.10"
keywords = [
    "agent",
    "observability",
    "monitoring",
    "loop-detection",
    "llm-agents",
    "in-process",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core is stdlib-only — no runtime dependencies, on purpose. This is what
# makes loopcanary cheap enough to run inside an RL rollout worker.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[project.urls]
Homepage = "https://github.com/tianyi-zhang-02/loopcanary"
Issues = "https://github.com/tianyi-zhang-02/loopcanary/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loopcanary"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["loopcanary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["loopcanary"]
branch = true

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]
